# TestAgent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  main.py
app/analyzer/: __init__.py  lightweight_analyzer.py
app/api/: auth.py  routes.py  schemas.py
app/core/: assertion_engine.py  bdd_generator.py  evidence_collector.py  ledger_processor.py  orchestrator.py  prd_processor.py  report_generator.py  test_case_generator.py  test_runner.py
app/integrations/: browser_use_client.py  vlm_client.py
app/memory/: __init__.py  permanent.py  project.py  runtime.py  system.py
app/models/: evidence.py  ledger.py  test_case.py
app/storage/: file_store.py  sqlite.py
tests/: conftest.py  test_assertion_engine.py  test_bdd_generator.py  test_browser_use_client.py  test_cli.py  test_lightweight_analyzer.py  test_prd_processor.py  test_report_api.py  test_vlm_client.py
