[project]
name = "test-agent"
version = "0.1.0"
description = "Minimal PRD-driven E2E test agent service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "pydantic>=2.6.0",
  "starlette>=0.40.0,<0.42.0",
  "uvicorn[standard]>=0.27.0",
]

[project.scripts]
test-agent = "app.cli:main"

[project.optional-dependencies]
browser = [
  "playwright>=1.42.0",
  "browser-use>=0.1.0",
]
openai = [
  "openai>=1.40.0",
]
anthropic = [
  "anthropic>=0.34.0",
]
dev = [
  "httpx>=0.27.0,<0.28.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]
glm = [
  "openai>=1.40.0",
  "zai-sdk>=0.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
